package com.violinstudio.ui.feature.auth.view

const val LOGIN_TAG = "login"
const val REGISTER_TAG = "register"
const val RESET_TAG = "reset_password"
const val AUTH_EMAIL_TAG = "auth_email"
const val AUTH_PASSWORD_TAG = "auth_password"
const val AUTH_SUBMIT_TAG = "auth_submit"
const val AUTH_MESSAGE_TAG = "auth_message"
const val AUTH_GOOGLE_TAG = "auth_google"

